// Copyright (c) The Libra Core Contributors
// SPDX-License-Identifier: Apache-2.0

// A Debugging interface to be used to query debug information from a Node
syntax = "proto3";

package debug;

message GetNodeDetailsRequest {}

message GetNodeDetailsResponse { map<string, string> stats = 1; }

message GetEventsRequest {}

message GetEventsResponse { repeated Event events = 1; }

message Event {
  string name = 1;
  int64 timestamp = 2;
  string json = 3;
}

service NodeDebugInterface {
  // Returns debug information about node
  rpc GetNodeDetails(GetNodeDetailsRequest) returns (GetNodeDetailsResponse) {}

  // Returns recent events generated by event! macro
  rpc GetEvents(GetEventsRequest) returns (GetEventsResponse) {}
}
